<resources>
    <string name="app_name">AppVentaZapatos</string>
    <string name="venta_de_calzado">Venta de Calzado</string>
    <string name="venta_calzado">Venta  Calzado</string>
    <string name="calzado_hombre">Calzado Masculino</string>
    <string name="calzado_mujer">Calzado Femenino</string>
    <string name="cantidad">Ingrese Cantidad pares</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="txt_resultado">Resultado</string>
    <string name="cantidad_zapatos">Indique cantidad</string>
    <string name="zapatillas">zapatillas</string>
    <string name="clasicos">clasicos</string>
    <string name="Nike">Nike</string>
    <string name="Adidas">Adidas</string>
    <string name="Puma">Puma</string>
    <string name="error">Debe Digitar una cantidad </string>
    <string name="seleccion_genero">Genero</string>
    <string-array name="tipoZapato">
        <item>@string/zapatillas</item>
        <item>@string/clasicos</item>
    </string-array>
    <string-array name="marcaZapatos">
        <item>@string/Nike</item>
        <item>@string/Adidas</item>
        <item>@string/Puma</item>
    </string-array>

    <string-array name="Genero">
        <item>@string/calzado_hombre</item>
        <item>@string/calzado_mujer</item>
    </string-array>
</resources>
